{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 70,
  "lineage": "9cad8f15-0348-8a3e-c851-38542cb688b2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkInterfaces/lighthouse-nic",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.39.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/publicIPAddresses/lighthouse-ip",
                "subnet_id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/virtualNetworks/lighthouse-vnet/subnets/lighthouse-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-8B-E7-B2",
            "name": "lighthouse-nic",
            "private_ip_address": "10.39.1.4",
            "private_ip_addresses": [
              "10.39.1.4"
            ],
            "resource_group_name": "lighthouse",
            "tags": {
              "ContactEmailAddress": "moiz.mohammed@zeiss.com",
              "CostUser": "ZO0000868281",
              "lz_workloadowner": "moiz.mohammed@zeiss.com"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lighthouse-nic",
            "resource_group_name": "lighthouse",
            "subscription_id": "be1eddca-7ed7-43c0-bc4a-692e60be17bf"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkInterfaces/lighthouse-nic|/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkSecurityGroups/lighthouse-nsg",
            "network_interface_id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkInterfaces/lighthouse-nic",
            "network_security_group_id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkSecurityGroups/lighthouse-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkSecurityGroups/lighthouse-nsg",
            "location": "eastus",
            "name": "lighthouse-nsg",
            "resource_group_name": "lighthouse",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4008",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-4008",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ContactEmailAddress": "moiz.mohammed@zeiss.com",
              "CostUser": "ZO0000868281",
              "lz_workloadowner": "moiz.mohammed@zeiss.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "lighthouse-nsg",
            "resource_group_name": "lighthouse",
            "subscription_id": "be1eddca-7ed7-43c0-bc4a-692e60be17bf"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_4008",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "4008",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkSecurityGroups/lighthouse-nsg/securityRules/Allow-4008",
            "name": "Allow-4008",
            "network_security_group_name": "lighthouse-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "lighthouse",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-4008",
            "network_security_group_name": "lighthouse-nsg",
            "resource_group_name": "lighthouse",
            "subscription_id": "be1eddca-7ed7-43c0-bc4a-692e60be17bf"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/networkSecurityGroups/lighthouse-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "lighthouse-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "lighthouse",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH",
            "network_security_group_name": "lighthouse-nsg",
            "resource_group_name": "lighthouse",
            "subscription_id": "be1eddca-7ed7-43c0-bc4a-692e60be17bf"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/publicIPAddresses/lighthouse-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.119.46.229",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "lighthouse-ip",
            "resource_group_name": "lighthouse",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmailAddress": "moiz.mohammed@zeiss.com",
              "CostUser": "ZO0000868281",
              "lz_workloadowner": "moiz.mohammed@zeiss.com"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lighthouse-ip",
            "resource_group_name": "lighthouse",
            "subscription_id": "be1eddca-7ed7-43c0-bc4a-692e60be17bf"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.39.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/virtualNetworks/lighthouse-vnet/subnets/lighthouse-subnet",
            "name": "lighthouse-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "lighthouse",
            "virtual_network_name": "lighthouse-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lighthouse-subnet",
            "resource_group_name": "lighthouse",
            "subscription_id": "be1eddca-7ed7-43c0-bc4a-692e60be17bf",
            "virtual_network_name": "lighthouse-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.39.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2c5ec37b-eafc-460e-9135-de17a8434ed8",
            "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/virtualNetworks/lighthouse-vnet",
            "location": "eastus",
            "name": "lighthouse-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "lighthouse",
            "subnet": [
              {
                "address_prefixes": [
                  "10.39.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/be1eddca-7ed7-43c0-bc4a-692e60be17bf/resourceGroups/lighthouse/providers/Microsoft.Network/virtualNetworks/lighthouse-vnet/subnets/lighthouse-subnet",
                "name": "lighthouse-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "ContactEmailAddress": "moiz.mohammed@zeiss.com",
              "CostUser": "ZO0000868281",
              "lz_workloadowner": "moiz.mohammed@zeiss.com"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "lighthouse-vnet",
            "resource_group_name": "lighthouse",
            "subscription_id": "be1eddca-7ed7-43c0-bc4a-692e60be17bf"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}